--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,10 @@ repositories{
     mavenLocal()
 }
 
+compileJava {
+    options.compilerArgs << '-parameters'
+}
+
 application {
     mainClass='bot.Launcher'
 }
@@ -28,8 +32,8 @@ dependencies{
     implementation group: 'net.dv8tion', name: 'JDA', version: '5.3.0'
     
     // REFLECTION
-    implementation group: 'com.google.guava', name: 'guava', version: '31.0.1-jre'
-    
+    implementation group: 'io.github.classgraph', name: 'classgraph', version: '4.8.179'
+
     // RIOT
     implementation group: 'fr.guillaume', name:'irelia', version: '1.0.2'
 
