--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins{
     id 'java'
     id 'application'
+    id 'maven-publish'
     id 'com.gradleup.shadow' version '9.0.0-beta4'
 }
 
@@ -21,12 +22,22 @@ application {
     mainClass='bot.Launcher'
 }
 
+
+publishing {
+    publications {
+        mavenJava(MavenPublication) {
+            from components.java
+        }
+    }
+}
+
+
 dependencies{
     implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.17.2'
     
     // LOG
     implementation group: 'org.slf4j', name: 'slf4j-api', version: '2.0.16'
-    implementation group: 'org.slf4j', name: 'slf4j-simple', version: '2.0.16'
+    runtimeOnly group: 'org.slf4j', name: 'slf4j-simple', version: '2.0.16'
     
     // DISCORD
     implementation group: 'net.dv8tion', name: 'JDA', version: '5.3.0'
