--- a/build.gradle
+++ b/build.gradle
@@ -49,7 +49,7 @@ dependencies{
     implementation group: 'fr.guillaume', name:'irelia', version: '1.0.2'
 
     // HIBERNATE
-    implementation 'org.hibernate.orm:hibernate-core:7.0.0.Beta5'
+    implementation 'org.hibernate.orm:hibernate-core:7.0.0.CR1'
     implementation 'jakarta.transaction:jakarta.transaction-api'
     implementation 'org.mariadb.jdbc:mariadb-java-client:3.5.2'
 
