--- a/build.gradle
+++ b/build.gradle
@@ -6,8 +6,13 @@ plugins{
 }
 
 group 'fr.guillaume'
-version '1.0.1'
+version '1.1.0'
 compileJava.options.encoding = 'UTF-8'
+
+compileJava{
+    sourceCompatibility = 21
+    targetCompatibility = 21
+}
 
 repositories{
     mavenCentral()
