--- a/build.gradle
+++ b/build.gradle
@@ -6,12 +6,23 @@ plugins{
 }
 
 group 'fr.guillaume'
-version '1.2.0'
+version '1.2.1'
 compileJava.options.encoding = 'UTF-8'
 
 repositories{
     mavenCentral()
     mavenLocal()
+}
+
+publishing {
+    publications {
+        mavenJava(MavenPublication) {
+            from components.java
+        }
+    }
+    repositories{
+        mavenLocal()
+    }
 }
 
 compileJava {
@@ -23,21 +34,14 @@ application {
 }
 
 
-publishing {
-    publications {
-        mavenJava(MavenPublication) {
-            from components.java
-        }
-    }
-}
-
-
 dependencies{
+
+    //JSON
     implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.17.2'
     
     // LOG
     implementation group: 'org.slf4j', name: 'slf4j-api', version: '2.0.16'
-    runtimeOnly group: 'org.slf4j', name: 'slf4j-simple', version: '2.0.16'
+    runtimeOnly "ch.qos.logback:logback-classic:1.5.18"
     
     // DISCORD
     implementation group: 'net.dv8tion', name: 'JDA', version: '5.3.0'
@@ -46,7 +50,7 @@ dependencies{
     implementation group: 'io.github.classgraph', name: 'classgraph', version: '4.8.179'
 
     // RIOT
-    implementation group: 'fr.guillaume', name:'irelia', version: '1.0.2'
+    implementation group: 'fr.guillaume', name:'irelia', version: '1.1.2'
 
     // HIBERNATE
     implementation 'org.hibernate.orm:hibernate-core:7.0.0.CR1'
