--- a/build.gradle
+++ b/build.gradle
@@ -44,7 +44,9 @@ dependencies{
     runtimeOnly "ch.qos.logback:logback-classic:1.5.18"
     
     // DISCORD
-    implementation group: 'net.dv8tion', name: 'JDA', version: '5.3.0'
+    implementation group: 'net.dv8tion', name: 'JDA', version: '6.0.0-rc.4'
+
+    implementation group: 'io.github.gdussine', name: 'bot-api', version: '1.0.0'
     
     // REFLECTION
     implementation group: 'io.github.classgraph', name: 'classgraph', version: '4.8.179'
